--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
+
 {
   "name": "AvatarJS",
-  "filename": "avatarServices.js",
+  "filename": "avatarServices.min.js",
   "version": "0.2.0",
   "description": "AvatarJS project for cdn",
   "autoupdate": {
     "source": "git",
     "target": "git://github.com/IPENGR/AvatarJS.git",
     "npmName": "avatarServices",
-    "npmFileMap": [
-      {
-        "basePath": "/",
-        "files": [
-          "avatarServices.min.js",
-          "avatarServices.js"
-        ]
-      }
-    ]
+    "npmFileMap": [{
+      "basePath": "",
+      "files": [
+        "avatarServices.js",
+        "avatarServices.min.js"
+
+      ]
+    }]
   },
   "author": "Innovapath",
   "license": "MIT",
