--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "npmName": "avatarServices",
     "npmFileMap": [
       {
-        "basePath": "/",
+        "basePath": "",
         "files": [
           "avatarServices.min.js",
           "avatarServices.js"
